
@startuml Entity

package typeorm {
  class "@Entity" as Entity
  class "@Column" as Column
  hide Column circle
  class "@PrimaryColumn" as PrimaryColumn
  hide PrimaryColumn circle
  class "@OneToMany" as OneToMany
  hide OneToMany circle
  class "@JoinColumn" as JoinColumn
  hide JoinColumn circle
  class "@ManyToOne" as ManyToOne
  hide ManyToOne circle
  class "@CreateDateColumn" as CreateDateColumn
  hide CreateDateColumn circle
  class "@UpdateDateColumn" as UpdateDateColumn
  hide UpdateDateColumn circle
}

package film.entity {


  class Film <<entity>> <<@Entity>> {
    @Column() @PrimaryColumn() readonly id: number
    @Column() readonly titel: Titel
    @Column() readonly regisseur: string
    @Column() readonly schauspieler: Schauspieler
    @Column() readonly version: number
    @Column() readonly bewertung: number
    @Column() readonly preis: number
    @Column() readonly erscheinungsdatum: Date
    @CreateDateColumn() readonly erzeugt: Date
    @UpdateDateColumn() readonly aktualisiert: Date
  }

  class Titel <<entity>> <<@Entity>> {
    @Column() @PrimaryColumn() readonly id: number
    @Column() readonly titel: string
  }

  class Schauspieler <<entity>> <<@Entity>> {
    @Column() @PrimaryColumn() readonly id: number
    @Column() readonly name: string
    @Column() readonly contentType?: string
  }

  Film ..> Entity
  Film *-- "*" Titel : @OneToOne() Titel
  Film *-- "*" Schauspieler : @OneToMany() Schauspieler

}

hide empty members


@enduml
